Started working on Comp 3220 use case modeling note

--- a/Comp 3220 - Object Oriented Software Analysis and Design/1. Introduction.tex
+++ b/Comp 3220 - Object Oriented Software Analysis and Design/1. Introduction.tex
@@ -94,6 +94,8 @@
         \item The \textbf{main benefit} to \textbf{iterative development} is the ability to get \textbf{feedback, on a regular basis}.
     \end{itemize}
 
+    \section*{\centering{Project Inception}}
+
     \subsection*{Project Inception}
     \begin{itemize}
         \item The \textbf{first stage} in a project is the \textbf{inception stage}.
@@ -117,6 +119,42 @@
                 \item[b.] What is the initial plan?
             \end{itemize}
         \end{enumerate}
+    \end{itemize}
+
+    \subsection*{The Artifacts of Inception}
+    \begin{itemize}
+        \item There are \textbf{9 artifacts of inception}:
+        \begin{enumerate}
+            \item \textbf{Vision and Business Case} - Describes the high-level goals and constraints, the business case, and provides an executive summary.
+            \item \textbf{Use Case Model} - Describes the functional requirements. During inception, the names of most use cases will be identified, and some will be analyzed in detail.
+            \item \textbf{Supplementary Specification} - Describes other requirements, mostly non-functional requirements. During inception, it is useful to have an idea of the key non-functional requirements that have a major impact on the architecture.
+            \item \textbf{Glossary} - The key domain terminology, and a data dictionary.
+            \item \textbf{Risk List and Risk Management Plan} - Describes the risks (business, technical, resource, schedule) and ideas for their mitigation.
+            \item \textbf{Prototypes and proof-of-concepts} - Clarifies the vision, and validates the technical ideas.
+            \item \textbf{Iteration Plan} - Describes what to do in the first elaboration iteration.
+            \item \textbf{Phase Plan and Software Development Plan} - Low-percision guess for the elaboration phase duration (tools, people, education, resources).
+            \item \textbf{Development Case} - A description of the customized UP steps and artifacts for the project.
+        \end{enumerate}
+    \end{itemize}
+
+    \subsection*{The Vision Document}
+    \begin{itemize}
+        \item A \textbf{vision document} is a document that \textbf{describes an idea or project}. It defines the product / service to be developed in terms of the \textbf{stakeholder's key needs}.
+        \item There are \textbf{6 sections} in the \textbf{vision document}:
+        \begin{enumerate}
+            \item \textbf{Introduction} - Describe the project with one or two lines.
+            \item \textbf{Problem Statement} - Use a short paragraph to explain the problem that is being solved.
+            \item \textbf{Stakeholders} - Identify stakeholders (owner, manager, customer, etc) and their key interests (what they need to be able to do).
+            \item \textbf{User and Goals} - Identify the users and user-level goals (users are usually stakeholders).
+            \item \textbf{Summary} - List the system's functional (services) and non-functional (constraints) requirements.
+            \item \textbf{Project Risk} - Explain what might be difficult to design, and why.
+        \end{enumerate}
+    \end{itemize}
+
+    \subsection*{The List Of Requirements and Glossary}
+    \begin{itemize}
+        \item The \textbf{list of requirements} states the \textbf{main requirements} that solution must contain, and assigns them each a unique number (R1, R2, ...).
+        \item The \textbf{glossary (data dictionary)} defines all \textbf{terms that will be used throughout the project} as well as any \textbf{alias} they may have.
     \end{itemize}
 
 \end{document}
